<resources>
    <string name="app_name">MVVMSample</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="fruit_picture">水果照片</string>
    <string name="big_image_view">放大看水果照片</string>
    <string name="menu_msg">消息(%d)</string>
    <string name="menu_like">我的收藏</string>
    <string name="menu_upload_logger">上报程序日志</string>
    <string name="title_like">My Like</string>
    <string name="like_carview_pic">水果封面</string>
    <string name="like_success">收藏成功</string>
    <string name="loading_dialog_liking">收藏中…</string>
    <string name="loading_dialog_delete">取消收藏中…</string>
    <string name="main_activity_title">Orchard</string>
    <string name="delete_dialog_title">取消收藏？</string>
    <string name="delete_dialog_message">是否取消收藏？</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="upload_log_dialog_title">上报日志</string>
    <string name="upload_log_dialog_message">日志数量</string>
    <string name="toast_upload_loginfo">将会在后台上传日志</string>
    <string name="toast_liked">已经收藏过了！</string>
    <string name="toast_request_permission">要授予对应的权限，软件才能正常使用！</string>
</resources>

