...
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="340dp">
                <ImageView
                    app:imageFromUrl="@{fruit.imageUrl}"
                    android:scaleType="centerCrop"
                    android:id="@+id/fruit_pic"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/fruit_picture" />

                <ImageView
                    android:visibility="invisible"
...
                    android:layout_width="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:backgroundTint="#E91E63"
                    android:src="@drawable/fab_icon_like"
                    android:id="@+id/fab_like"
                    android:layout_height="wrap_content"/>

            </FrameLayout>

            <TextView
                android:textColor="@color/title_text_color"
...
